OkayI think its working

--- a/WanderList/WanderList/Views/Shared/_Layout.cshtml
+++ b/WanderList/WanderList/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
 				<ul class="nav navbar-nav navbar-left">
 					<li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
 					<li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-					<li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+					<li><a asp-area="" asp-controller="Home" asp-action="Discover">Discover</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a asp-area="" asp-controller="Home" asp-action="Login">Login</a></li>
