Added base User support

--- a/WanderList/WanderList/Views/Shared/_Layout.cshtml
+++ b/WanderList/WanderList/Views/Shared/_Layout.cshtml
@@ -29,14 +29,15 @@
                 <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">WanderList</a>
             </div>
 			<div class="navbar-collapse collapse">
-				<ul class="nav navbar-nav navbar-left">
-					<li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-					<li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-					<li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-				</ul>
+                <ul class="nav navbar-nav navbar-left">
+                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                </ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a asp-area="" asp-controller="Home" asp-action="Login">Login</a></li>
-					<li><a asp-area="" asp-controller="Home" asp-action="SignUp">Sign Up</a></li>
+					<li><a asp-area="" asp-controller="Users" asp-action="Index">Sign Up</a></li>
 				</ul>
 			</div>
         </div>
