Changed page flow

--- a/WanderList/WanderList/Views/Shared/_Layout.cshtml
+++ b/WanderList/WanderList/Views/Shared/_Layout.cshtml
@@ -30,14 +30,12 @@
             </div>
 			<div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-left">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Locations" asp-action="Index">Location Library</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Discover">Discover Locations</a></li>
                 </ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a asp-area="" asp-controller="Users" asp-action="Index">Login</a></li>
-					<li><a asp-area="" asp-controller="Users" asp-action="Index">Sign Up</a></li>
+					<li><a asp-area="" asp-controller="Users" asp-action="Create">Sign Up</a></li>
 				</ul>
 			</div>
         </div>
