Added Discover and made login page flow to create account page

--- a/WanderList/WanderList/Views/Home/Login.cshtml
+++ b/WanderList/WanderList/Views/Home/Login.cshtml
@@ -16,5 +16,5 @@
 
 <div>
 	<p>Don't have an account?</p>
-	<a href="">Create an account here.</a>
+	<a href="~/Users/Create">Create an account here.</a>
 </div>
