--- a/WanderList/WanderList/Views/Shared/_Layout.cshtml
+++ b/WanderList/WanderList/Views/Shared/_Layout.cshtml
@@ -31,10 +31,10 @@
 			<div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-left">
                     <li><a asp-area="" asp-controller="Locations" asp-action="Index">Location Library</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Discover">Discover Locations</a></li>
+                    <li><a asp-area="" asp-controller="Users" asp-action="Discover">Discover Locations</a></li>
                 </ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a asp-area="" asp-controller="Users" asp-action="Index">Login</a></li>
+					<li><a asp-area="" asp-controller="Users" asp-action="Login">Login</a></li>
 					<li><a asp-area="" asp-controller="Users" asp-action="Create">Sign Up</a></li>
 				</ul>
 			</div>
