--- a/WanderList/WanderList/Views/Users/Dashboard.cshtml
+++ b/WanderList/WanderList/Views/Users/Dashboard.cshtml
@@ -1,8 +1,20 @@
-﻿@{
-	ViewData["Title"] = "Dash Board";
+﻿@model IEnumerable<WanderList.Models.User>
+
+@{
+    ViewData["Title"] = "Dashboard";
+    User usr = ViewData["UserObj"] as User;
+    Location loc = ViewData["Location"] as Location;
+    int count = ViewData["Count"] as int;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<h2>Discover Locations</h2>
 
-<h2>User Dashborad</h2>
-
-<p>Welcome to your Dashborad</p>
-<p>@HttpContext.Items["User"]</p>
+<p>
+    @loc.Name
+    <br />
+    @loc.Address
+    <br />
+    @loc.Rating
+    <br />
+    @loc.Description
+</p>
