--- a/WanderList/WanderList/Views/Users/Dashboard.cshtml
+++ b/WanderList/WanderList/Views/Users/Dashboard.cshtml
@@ -1,20 +1,8 @@
-﻿@model IEnumerable<WanderList.Models.User>
-
-@{
-    ViewData["Title"] = "Dashboard";
-    User usr = ViewData["UserObj"] as User;
-    Location loc = ViewData["Location"] as Location;
-    int count = ViewData["Count"] as int;
-    Layout = "~/Views/Shared/_Layout.cshtml";
+﻿@{
+	ViewData["Title"] = "Dash Board";
 }
-<h2>Discover Locations</h2>
 
-<p>
-    @loc.Name
-    <br />
-    @loc.Address
-    <br />
-    @loc.Rating
-    <br />
-    @loc.Description
-</p>
+<h2>User Dashborad</h2>
+
+<p>Welcome to your Dashborad</p>
+<p>@HttpContext.Items["User"]</p>
