--- a/WanderList/WanderList/Views/Users/Login.cshtml
+++ b/WanderList/WanderList/Views/Users/Login.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" type="password" class="form-control" />
+                <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -28,6 +28,14 @@
         </form>
     </div>
 </div>
+
+@*<div class="input-group">
+    <input type="email" class="form-control" id="email" placeholder="Email" />
+</div>
+
+<div class="input-group">
+    <input type="password" class="form-control" id="password" placeholder="Password" />
+</div>*@
 
 <div>
     <p>Don't have an account?</p>
