Commented out count in Dashboard.cshtml

--- a/WanderList/WanderList/Views/Users/Dashboard.cshtml
+++ b/WanderList/WanderList/Views/Users/Dashboard.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Dashboard";
     User usr = ViewData["UserObj"] as User;
     Location loc = ViewData["Location"] as Location;
-    int count = ViewData["Count"] as int;
+    //int count = ViewData["Count"] as int;
     Layout = "~/Views/Shared/_Layout.cshtml";
 
 }
