Added Images to dashboard

--- a/WanderList/WanderList/Views/Users/Dashboard.cshtml
+++ b/WanderList/WanderList/Views/Users/Dashboard.cshtml
@@ -20,7 +20,11 @@
 			@loc.Rating
 			<br />
 			@loc.Description
+            <br />
+            @loc.ImageLink
 		</p>
+
+        <img src=@loc.ImageLink />
 
 		<form asp-action="Dashboard">
 			<div class="form-group">
