--- a/WanderList/WanderList/Views/Users/Dashboard.cshtml
+++ b/WanderList/WanderList/Views/Users/Dashboard.cshtml
@@ -11,17 +11,12 @@
 <h2>Discover Locations</h2>
 
 <div class="row">
-    <div class="col-md-2">
-        <form asp-action="Dashboard">
-            <div class="form-group">
-                <input type="submit" value="Yes" class="btn btn-default" />
-            </div>
-
-            <div class="form-group">
-                <input type="submit" value="No" class="btn btn-default" />
-            </div>
-        </form>
-    </div>
+	<div class="col-md-2">
+		<div class="form-group">
+			<a asp-action="Like" asp-route-locId="@loc.LocationId" class="btn btn-default">Yes</a>
+			<a asp-action="Dislike" asp-route-locId="@loc.LocationId" class="btn btn-default">No</a>
+		</div>
+	</div>
 	<div class="col-md-4">
 		<p>
 			@loc.Name
