Updated Home Page to have a message

--- a/WanderList/WanderList/Views/Home/Index.cshtml
+++ b/WanderList/WanderList/Views/Home/Index.cshtml
@@ -1,12 +1,27 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Welcome to WanderList";
 }
 <h2>@ViewData["Title"]</h2>
+<html>
+<head>
 
-<p>HTML should be done in .cshtml files. This should be the home page.</p>
+</head>
+<style>
+    p {
+        margin-left: 0%;
+        color: black;
+        font-size: 12pt;
+    }
+</style>
 
+<body>
+    <p>Hello! Please Login or Sign Up to start finding new vacation spots.</p>
+    <h3>About Wanderlist</h3>
+    <p>WanderList is a Web Application with the goal of simplifying visiting Boulder. Using a randomized lcoation generator, you can compile a quick list of things to do, simply by swiping right on things you like, and left on things you do not! In the end you are left with a WanderList of things you want to do while visiting Boulder.</p>
+
+</body>
+</html>
 <!-- Commented out default template-->
-
 <!-- <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
